@@ -94,10 +94,7 @@ int ipmi_oem_wistron_set_dhcp_retry (ipmi_oem_state_data_t *state_data);
 int ipmi_oem_wistron_get_link_status_change_control (ipmi_oem_state_data_t *state_data);
 int ipmi_oem_wistron_set_link_status_change_control (ipmi_oem_state_data_t *state_data);
 
-#if 0
-/* can't verify - need newer firmware */
 int ipmi_oem_wistron_set_password_policy (ipmi_oem_state_data_t *state_data);
-#endif
 
 #if 0
 /* can't verify - doesn't appear to work */
