@@ -1,3 +1,7 @@
+2012-07-19  Albert Chu <chu11@llnl.gov>
+
+	* ipmi-oem/: Fix and support Wistron set-password-policy.
+	
 2012-07-18  Albert Chu <chu11@llnl.gov>
 	
 	* ipmi-oem/: Remove Wistron get-password-policy.
